force-app/main/default/objects/Contact/fields/VCC1__Call_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>