force-app/main/default/objects/Contact/fields/VCC1__Calling_Number_Encrypted_Data__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Calling_Number_Encrypted_Data__c</fullName>
    <label>Calling Number Encrypted Data</label>
    <type>TextArea</type>
</CustomField>