force-app/main/default/objects/Contact/fields/VCC1__Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Country_ISO_Code__c</fullName>
    <label>Country ISO Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>