force-app/main/default/objects/Contact/fields/VCC1__Country_Name__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Country_Name__c</fullName>
    <label>Country Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>