force-app/main/default/objects/Contact/fields/VCC1__Email_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Email_Encrypted__c</fullName>
    <label>Email Decrypted</label>
    <type>Email</type>
</CustomField>