force-app/main/default/objects/Contact/fields/VCC1__Mobile_Encrypted_Data__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Mobile_Encrypted_Data__c</fullName>
    <label>Mobile Encrypted Data</label>
    <type>TextArea</type>
</CustomField>