force-app/main/default/objects/Contact/fields/VCC1__Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Mobile_Number__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;) 
, &apos;)&apos;,&apos;&apos;) 
, &apos;(&apos;,&apos;&apos;) 
, &apos;&gt;&apos;,&apos;&apos;) 
, &apos;_&apos;,&apos;&apos;) 
, &apos;!&apos;,&apos;&apos;) 
, &apos;@&apos;,&apos;&apos;) 
, &apos;#&apos;,&apos;&apos;) 
, &apos;$&apos;,&apos;&apos;) 
, &apos;%&apos;,&apos;&apos;) 
, &apos;^&apos;,&apos;&apos;) 
, &apos;&amp;&apos;,&apos;&apos;) 
, &apos;*&apos;,&apos;&apos;) 
, &apos;+&apos;,&apos;&apos;) 
, &apos;=&apos;,&apos;&apos;) 
, &apos;~&apos;,&apos;&apos;) 
, &apos;`&apos;,&apos;&apos;) 
, &apos;}&apos;,&apos;&apos;) 
, &apos;{&apos;,&apos;&apos;) 
, &apos;]&apos;,&apos;&apos;) 
, &apos;[&apos;,&apos;&apos;) 
, &apos;&quot;&apos;,&apos;&apos;) 
, &apos;|&apos;,&apos;&apos;) 
, &apos;;&apos;,&apos;&apos;) 
, &apos;:&apos;,&apos;&apos;) 
, &apos;?&apos;,&apos;&apos;) 
, &apos;/&apos;,&apos;&apos;) 
, &apos;&lt;&apos;,&apos;&apos;) 
, &apos;,&apos;,&apos;&apos;) 
, &apos;.&apos;,&apos;&apos;) 
, &apos; &apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Number</label>
    <type>Text</type>
</CustomField>