force-app/main/default/objects/Contact/fields/VCC1__MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>VCC1__MobileNumber__c</fullName>
    <formula>IF(
 BEGINS(VCC1__Mobile_Number__c, &apos;00&apos;),
 MID( VCC1__Mobile_Number__c , 3, 10),
 IF(
  BEGINS(VCC1__Mobile_Number__c, &apos;0&apos;),
  MID( VCC1__Mobile_Number__c, 2, 10),
  IF(
   BEGINS(VCC1__Mobile_Number__c, VCC1__Country_ISO_Code__c),
   MID(VCC1__Mobile_Number__c , LEN(VCC1__Country_ISO_Code__c)+1, LEN(VCC1__Mobile_Number__c)-LEN(VCC1__Country_ISO_Code__c)+1),
   VCC1__Mobile_Number__c
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Number</label>
    <type>Text</type>
</CustomField>