force-app/main/default/objects/Contact/fields/VCC1__Phone_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Phone_Encrypted__c</fullName>
    <label>Phone</label>
    <length>15</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>