force-app/main/default/objects/Contact/fields/VCC1__Phone_Encrypted_Data__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Phone_Encrypted_Data__c</fullName>
    <label>Phone Encrypted Data</label>
    <type>TextArea</type>
</CustomField>