force-app/main/default/objects/Contact/fields/Visa_Copy_Details__c.field-meta.xml
<CustomField>
    <fullName>Visa_Copy_Details__c</fullName>
    <label>Visa Copy Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>