force-app/main/default/objects/Contact/fields/Visa_Copy_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Visa_Copy_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Copy Uploaded</label>
    <type>Checkbox</type>
</CustomField>