force-app/main/default/objects/Contact/fields/Visa_Copy_Valid_Upto__c.field-meta.xml
<CustomField>
    <fullName>Visa_Copy_Valid_Upto__c</fullName>
    <label>Visa Copy Valid Upto</label>
    <type>Date</type>
</CustomField>