force-app/main/default/objects/Contact/fields/Visa_Copy_Verified__c.field-meta.xml
<CustomField>
    <fullName>Visa_Copy_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Copy Verified</label>
    <type>Checkbox</type>
</CustomField>