force-app/main/default/objects/Contact/fields/Visa_No__c.field-meta.xml
<CustomField>
    <fullName>Visa_No__c</fullName>
    <label>Visa No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>