force-app/main/default/objects/Contact/validationRules/Birthdate_Cannot_Be_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Birthdate_Cannot_Be_Future_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Birthdate &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Birthdate Cannot Be a Future Date</errorMessage>
</ValidationRule>