force-app/main/default/objects/Contact/validationRules/Emirates_ID_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Emirates_ID_format</fullName>
    <active>false</active>
    <errorConditionFormula>IF(NOT(ISBLANK(Emirates_ID__c)), NOT(REGEX(Emirates_ID__c, &quot;^[0-9]{3}-[0-9]{4}-[0-9]{7}-[0-9]{1}$&quot;)),false)</errorConditionFormula>
    <errorDisplayField>Emirates_ID__c</errorDisplayField>
    <errorMessage>The format must be 784-1234-1234567-1.&quot;</errorMessage>
</ValidationRule>