force-app/main/default/objects/Contact/validationRules/PassportNoOREmiratesIDResidentialStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>PassportNoOREmiratesIDResidentialStatus</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
  AND(ISPICKVAL( PropStrength__Resident_Status__c , &quot;Resident Citizen&quot;), ISBLANK(Emirates_ID__c)),
  AND(ISPICKVAL(PropStrength__Resident_Status__c, &quot;Non Resident Citizen&quot;), ISBLANK(Passport_No__c))
)</errorConditionFormula>
    <errorDisplayField>PropStrength__Resident_Status__c</errorDisplayField>
    <errorMessage>Please Enter Emirates ID if Residential Status is Resident OR Passport No if Non-Resident</errorMessage>
</ValidationRule>