force-app/main/default/objects/Contact/validationRules/PropStrength__First_NameMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>PropStrength__First_NameMandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please Enter First Name and Enter Middle Name in Last Name field.</errorMessage>
</ValidationRule>