force-app/main/default/objects/Contact/validationRules/PropStrength__Pan_No_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>PropStrength__Pan_No_Format</fullName>
    <active>false</active>
    <errorConditionFormula>AND(PropStrength__Income_Tax_permanent_Account_No__c  &lt;&gt; Null,LEN(PropStrength__Income_Tax_permanent_Account_No__c) &lt;&gt; 10)</errorConditionFormula>
    <errorDisplayField>PropStrength__Income_Tax_permanent_Account_No__c</errorDisplayField>
    <errorMessage>Please Check PAN No. It Should of 10 Digit</errorMessage>
</ValidationRule>