force-app/main/default/objects/Contact/listViews/Birthdays_Today.listView-meta.xml
<ListView>
    <fullName>Birthdays_Today</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.BIRTHDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Birthdays Today</label>
</ListView>