force-app/main/default/objects/Contact/listViews/PropStrength__BirthdaysThisMonth.listView-meta.xml
<ListView>
    <fullName>PropStrength__BirthdaysThisMonth</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.BIRTHDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Birthdays This Month</label>
</ListView>